added madlibs route and html file

--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1>Goodbye!{{ person }} you'll be missed!</h1>
+<h1>Goodbye! you'll be missed!</h1>
 
-<form action="/compliment">
- <button type="button">Go back!</button>
+<form action="/greet">
+ <input type="submit" name="submit">Go back!
 </form>
 
 </body>
