--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -6,8 +6,8 @@
 <body>
     Hi {{ person }}! Would you like to play a game?
     <form action="/game">
-      <input type="radio" name="playgame"> Yes
-      <input type="radio" name="playgame"> No
+      <input type="radio" name="playgame" value="yes"> Yes
+      <input type="radio" name="playgame" value ="no"> No
       <input type="submit" name="submit"> 
     </form>
 </body>
